--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,4 +1,5 @@
     @import url(./reset.css);
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     
     :root{
         --primary-color: #fff;
@@ -6,6 +7,12 @@
         --primary-font: 'Poppins', sans-serif;
         --secondary-font: 'Poppins', sans-serif;
         --bg-color: #111111;
+    }
+
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
 
     body{
@@ -37,6 +44,100 @@
         height: 100%;
         background: #141414;
         border-radius: 0px 30px 30px 0px;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .left-side-bar-head{
+        padding: 15px;
+        border-bottom: 1px solid rgb(31, 31, 31);
+    }
+
+    #search{
+        border: 1px solid rgb(51, 51, 51);
+        width: 100%;
+        height: 40px;
+        outline: none;
+        background: none;
+        text-align: center;
+        align-content: center;
+        border-radius: 50px;
+        color: whitesmoke;
+        font-family: var(--primary-font);
+        font-size: 0.8rem;
+    }
+
+    .left-side-bar-nav{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        margin-top: 30px;
+
+            & img{
+                opacity: .5;
+                cursor: pointer;
+                width: 20px;
+                height: 20px;
+            }
+
+            & .active{
+                width: 40px;
+                height: 40px;
+                text-align: center;
+                align-items: center;
+                border-radius: 10px;
+                overflow: hidden;
+                background: linear-gradient(120deg, rgba(255, 255, 255, 0.5), black);
+            }
+    }
+
+    .left-side-bar-nav-btn{
+        border: none;
+        outline: none;
+        background: none;
+        transition: all .2s ease;
+
+            &:hover{
+                transform: scale(1.1);
+            }
+
+    }
+
+    .left-side-bar-chats{
+        margin-top: 10px;
+    }
+
+    .left-side-bar-chat{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        color: white;
+        font-family: var(--primary-font);
+        font-size: 0.8rem;
+        border: 1px solid rgb(41, 41, 41);
+        border-radius: 15px;
+        cursor: pointer;
+        transition: all .2s ease;
+
+            &:hover{
+                background-color: rgb(51, 51, 51);
+            }
+    }
+
+    .left-side-bar-account{
+        width: 100%;
+        height: 50px;
+        font-family: var(--primary-font);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        background: linear-gradient(120deg, var(--bg-color), rgba(43, 43, 43, 0.5));
+        color: white;
+        padding: 10px;
+        margin-top: auto;
     }
 
     .right-side-bar{
@@ -50,5 +151,3 @@
         width: calc(100% - 250px - 200px);
         height: 100%;
     }
-
-    
