--- a/client/style/style.css
+++ b/client/style/style.css
@@ -149,5 +149,75 @@
 
     .chat{
         width: calc(100% - 250px - 200px);
+        height: 100%;   
+    }
+
+    .chat-display{
+        width: 100%;
+        height: 85%;
+        padding: 20px;
+        overflow-y: scroll;
+    }
+
+    .chat-display::-webkit-scrollbar-track{
+        background-color: rgb(71, 71, 71);
+        border-radius: 10px;
+    }
+
+    .chat-display::-webkit-scrollbar{
+        width: 5px;
+        height: 12px;
+    }
+
+    .chat-area{
+        width: 100%;
+        height: 15%;
+        padding: 20px;
+    }
+
+    #chat-area-input{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         height: 100%;
+        width: 90%;
+        font-family: var(--primary-font);
+        font-size: 0.8rem;
+        padding: 20px;
+        background-color: rgb(31, 31, 31);
+        border-radius: 50px;
+
+            button{
+                border: none;
+                outline: none;
+                background: none;
+            }
+
+            input{
+                background: none;
+                border: none;
+                outline: none;
+                color: white;
+            }
+    }
+
+    .chat-area-wrapper{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        border-radius: 50px;
+        border: 1px solid rgb(31, 31, 31);
+
+            button{
+                border: none;
+                outline: none;
+                background: none;
+            }
+    }
+
+    #audio-msg{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 10%;
     }
